--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --a0t --prod"
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
