--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
+    "build": "ng build --prod",
     "lint": "ng lint",
+    "test": "ng test",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod"
   },
